# coach-tyranny-bot

./: .gitignore  .id.z  meson.build  wip.txt
.cache/clangd/index/: main.cc.D8807DD6885D7D9C.idx  main.cpp.367B7F0FA86DB6CA.idx
audio/: DOWN.pcm  LEFT.pcm  RELAX.pcm  RIGHT.pcm  UP.pcm
audio/FASTER/: FLEFT.pcm  FRIGHT.pcm  FUP.pcm
audio/INTRO/: CALISTHENICS.pcm  FA.pcm  LOOKSLIKE.pcm  PAN.pcm
audio/MISC/: ERYBODYGOTA.pcm  IS.pcm  NECKCALI.pcm  PUTP.pcm  YUNOCALI.pcm
audio/OUTRO/: DAISY.pcm  DONTMESSWTC.pcm  PITIFUL.pcm  SUCCSONG.pcm  THATSBEAUTY.pcm  THATSMORELIKEIT.pcm  THATSRIGHTBABY.pcm  UNFORGIVEN.pcm
include/: coach.hpp
src/: coach.cpp  main.cpp
